new WherePage (code art + zones)

--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,7 @@
   --color-blue-dark: #173961;
   --color-blue-light: #EBF6FF;
   --color-blue-semi-light: #BCE1FF;
+  --color-red-primary: #e3101a;
+
 
 }
